--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <p>
               <u>Xuan Wu</u>, Sheng Di, Congrong Ren, <u>Pu Jiao</u>, <u>Mingze Xia</u>, Cheng Wang, Hanqi Guo, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
               Enabling Efficient Error-controlled Lossy Compression for Unstructured Scientific Data.<br>
-              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors) <b>Nominated for the Best Paper Award.</b><br>
             </p>
           </div>
         </div> 
