--- a/research.html
+++ b/research.html
@@ -217,7 +217,7 @@
             <p>
               <u>Pu Jiao</u>, Sheng Di, <u>Mingze Xia</u>, <u>Xuan Wu</u>, Jinyang Liu, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
               Improving the Efficiency of Interpolation-Based Scientific Data Compressors with Adaptive Quantization Index Prediction.<br>
-              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors) <b>Nominated for the Best Paper Award.</b><br>
             </p>
           </div>
         </div> 
@@ -228,7 +228,7 @@
           </div>
           <div class="col-md-10">
             <p>
-              Jieyang Chen, Qian Gong, <b>Xin Liang</b>, Qing Liu, Lipeng Wan, Yanlian Li, Norbert Podhorszki, Scott Klasky.<br>
+              Jieyang Chen, Qian Gong, <b>Xin Liang</b>, Qing Liu, Lipeng Wan, Yanliang Li, Norbert Podhorszki, Scott Klasky.<br>
               HPDR: High-Performance Portable Scientific Data Reduction Framework.<br>
               <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I><br>
             </p>
@@ -399,7 +399,7 @@
             <p>
               Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, Franck Cappello.<br>
               FAZ: A flexible auto-tuned modular error-bounded compression framework for scientific data.<br>
-              <I>Proceedings of the 37th International Conference on Supercomputing, Orlando, FL, Jun 21 - 23, 2023. Nominated in the Best Paper Finalist.</I><br>
+              <I>Proceedings of the 37th International Conference on Supercomputing, Orlando, FL, Jun 21 - 23, 2023.</I> <b>Nominated in the Best Paper Finalist.</b><br>
             </p>
           </div>
         </div> 
