--- a/research.html
+++ b/research.html
@@ -204,7 +204,7 @@
             <p>
               <u>Xuan Wu</u>, Sheng Di, Congrong Ren, <u>Pu Jiao</u>, <u>Mingze Xia</u>, Cheng Wang, Hanqi Guo, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
               Enabling Efficient Error-controlled Lossy Compression for Unstructured Scientific Data.<br>
-              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)  <b>Nominated for the Best Paper Award</b><br>
             </p>
           </div>
         </div> 
@@ -217,7 +217,7 @@
             <p>
               <u>Pu Jiao</u>, Sheng Di, <u>Mingze Xia</u>, <u>Xuan Wu</u>, Jinyang Liu, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
               Improving the Efficiency of Interpolation-Based Scientific Data Compressors with Adaptive Quantization Index Prediction.<br>
-              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors) <b>Nominated for the Best Paper Award.</b><br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)<br>
             </p>
           </div>
         </div> 
@@ -399,7 +399,7 @@
             <p>
               Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, Franck Cappello.<br>
               FAZ: A flexible auto-tuned modular error-bounded compression framework for scientific data.<br>
-              <I>Proceedings of the 37th International Conference on Supercomputing, Orlando, FL, Jun 21 - 23, 2023.</I> <b>Nominated in the Best Paper Finalist.</b><br>
+              <I>Proceedings of the 37th International Conference on Supercomputing, Orlando, FL, Jun 21 - 23, 2023.</I> <b>Nominated in the Best Paper Finalist</b><br>
             </p>
           </div>
         </div> 
