--- a/research.html
+++ b/research.html
@@ -117,7 +117,7 @@
                 <li>Project description: This project will focus on improving the compression quality of scientific lossy data compressors by exploring intelligent methods and parameter optimization strategies to regenerate feature and mitigate artifacts. The goal is to i) study new techniques to regenerate features and/or mitigate artifacts for scientific lossy data compressors; ii) integrate the methods to improve the compression quality of SZ using parameter optimizations; iii) evaluate and optimize the framework with ECP applications.</li>
             </ul>
           </li>
-          <li><img src="img/nek_fp.png" class="float-right" style="height:120px;margin-right:40px">CRII: OAC: Enabling Quantities-of-Interest Error Control for Trust-Driven Lossy Compression
+          <li><img src="img/nek_fp.png" class="float-right" style="height:120px;margin-right:40px"><a href="crii.html">CRII: OAC: Enabling Quantities-of-Interest Error Control for Trust-Driven Lossy Compression</a>
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: PI</li>
                 <li>Lead PI: Xin Liang</li>
@@ -231,6 +231,32 @@
               Jieyang Chen, Qian Gong, <b>Xin Liang</b>, Qing Liu, Lipeng Wan, Yanliang Li, Norbert Podhorszki, Scott Klasky.<br>
               HPDR: High-Performance Portable Scientific Data Reduction Framework.<br>
               <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SIGMOD'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Longtao Zhang, Ruoyu Li, Congrong Ren, Sheng Di, Jinyang Liu, Jiajun Huang, Robert Underwood, Pascal Grosset, Dingwen Tao, <b>Xin Liang</b>, Hanqi Guo, Franck Cappello, Kai Zhao.<br>
+              LCP: Enhancing Scientific Data Management with Lossy Compression for Particles.<br>
+              <I>Proceedings of the 2025 ACM SIGMOD International Conference on Management of Data, Berlin, Germany, June 22 - 27, 2025.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>PacificVis'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Nathan Gorski, <b>Xin Liang</b>, Hanqi Guo, Lin Yan, Bei Wang.<br>
+              A General Framework for Augmenting Lossy Compressors with Topological Guarantees.<br>
+              <I>Proceedings of IEEE Transactions on Visualization and Computer Graphics (IEEE PacificVis 2025 Journal Track), Taipei, April 22-25, 2025.</I><br>
             </p>
           </div>
         </div> 
