--- a/crii.html
+++ b/crii.html
@@ -57,7 +57,7 @@
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
           <div class="starter-template">
-          <h2><img src="img/nsf.png" class="float-left" style="height:20px;margin-right:20px">CRII: OAC: Enabling Quantities-of-Interest Error Control for Trust-Driven Lossy Compression</h2>
+          <h2><img src="img/nsf.png" class="float-left" style="height:30px;margin-right:30px">CRII: OAC: Enabling Quantities-of-Interest Error Control for Trust-Driven Lossy Compression</h2>
           </div>
       <div><hr></div>
           <div class="starter-template">
@@ -70,13 +70,15 @@
       <div><hr></div>
           <div class="starter-template">
           <h2>Project description</h2>
-          <ul class="glyphicon glyphicon-list-alt">
-              <li>Scientific simulations and instruments are producing data at volumes and velocities that overwhelm network and storage systems. Although error-controlled lossy compressors have been employed to mitigate these data issues, many scientists still feel reluctant to adopt them because these compressors provide no guarantee on the accuracy of downstream analysis results derived from raw data. This project aims to fill this gap by developing a trust-driven lossy data compression infrastructure capable of strictly controlling the errors in downstream analysis theoretically and practically to facilitate the use of data reduction in scientific applications. Success of this project will promote the progress of science in multiple disciplines via effective data reduction, and contribute to resolving important societal problems including electric generation, weather forecasting, material design, and transportation. Moreover, this project will contribute to the growth and development of future generations of scientists and engineers through educational and engagement activities, including development of new curriculum and recruitment of K-12 students.</li>
-          </ul>
+      <div><hr></div>
+          <p>Scientific simulations and instruments are producing data at volumes and velocities that overwhelm network and storage systems. Although error-controlled lossy compressors have been employed to mitigate these data issues, many scientists still feel reluctant to adopt them because these compressors provide no guarantee on the accuracy of downstream analysis results derived from raw data. This project aims to fill this gap by developing a trust-driven lossy data compression infrastructure capable of strictly controlling the errors in downstream analysis theoretically and practically to facilitate the use of data reduction in scientific applications. Success of this project will promote the progress of science in multiple disciplines via effective data reduction, and contribute to resolving important societal problems including electric generation, weather forecasting, material design, and transportation. Moreover, this project will contribute to the growth and development of future generations of scientists and engineers through educational and engagement activities, including development of new curriculum and recruitment of K-12 students.</p>
           </div>
       <div><hr></div>
 
         <h2><a></a>Publications</h2>
+
+      <div><hr></div>
+
         <div class="row">
           <div class="col-md-2">
             <h6>IPDPS'25</h6>
@@ -258,6 +260,44 @@
             </p>
           </div>
         </div>        
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SSDBM'22</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Qian Gong, Ben Whitney, Chengzhu Zhang, <b>Xin Liang</b>, Anand Rangarajan, Jieyang Chen, Lipeng Wan, Paul Ullrich, Qing Liu, Robert Jacob, Sanjay Ranka, and Scott Klasky.<br>
+              Region-adaptive, Error-controlled Scientific Data Compression using Multilevel Decomposition.<br>
+              <I>Proceedings of the 34th International Conference on Scientific and Statistical Database Management, Copenhagen, Denmark, July 6-8, 2022.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>TVCG</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang</b>, Sheng Di, Franck Cappello, Mukund Raj, Chunhui Liu, Kenji Ono, Zizhong Chen, Tom Peterka, and Hanqi Guo.<br>
+              Toward Feature-Preserving Vector Field Compression.<br>
+              <I>IEEE Transactions on Visualization and Computer Graphics, 2022.</I> <br>
+            </p>
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-2">
+            <h6>TBD</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang<sup>*</sup></b>, Kai Zhao<sup>*</sup>, Sheng Di, Sihuan Li, Robert Underwood, Ali M. Gok, Jiannan Tian, Junjing Deng, Jon C. Calhoun, Dingwen Tao, Zizhong Chen, and Franck Cappello.<br>
+              SZ3: A Modular Framework for Composing Prediction-based Error-bounded Lossy Compressors (<b>2023 Best Paper Award from IEEE Transactions on Big Data by the IEEE Computer Society Publications Board</b>).<br>
+              <I>IEEE Transactions on Big Data, 2022.</I> (*: Co-first authors) <br>
+            </p>
+          </div>
+        </div> 
 
       <div><hr></div>
 
