--- a/research.html
+++ b/research.html
@@ -57,6 +57,17 @@
         <h2><a id="project"></a>Projects</h2>
         <div><hr></div>
         <ul class="glyphicon glyphicon-list-alt">
+          <li><img src="img/artifact.png" class="float-right" style="height:120px;margin-right:40px">Collaborative Research: OAC Core: Mitigating Artifacts in Scientific Data Compressors with a Learning-Driven Framework
+            <ul class="glyphicon glyphicon-list-alt">
+                <li>Role: Site PI</li>
+                <li>Lead PI: Yang Zhang</li>
+                <li>Sponsor: NSF</li>
+                <li>Amount: $600K (my share $300K)</li>
+                <li>Period: 10/2025 - 09/2028</li>
+                <li>Project description: Error-controlled lossy compressors are widely used to manage the large amount of data produced by scientific applications. Still, they may produce undesired compression artifacts that distort both raw and post hoc data analytics. This project aims to bridge the gap by developing a novel learning-driven framework to mitigate artifacts produced by scientific lossy compressors. The success of this project is expected to improve the integrity and quality of lossy-compressed scientific data significantly, thus facilitating the use of existing lossy-compression frameworks for efficient data storage, transmission, and analytics in scientific applications. This contributes to scientific discoveries in a broad range of domains, including climatology, cosmology, fusion energy science, and X-ray ptychography, as well as multiple aspects of research and education in advanced cyberinfrastructure.</li>
+            </ul>
+          </li>
+
           <li><img src="img/datapoly.png" class="float-right" style="height:120px;margin-right:40px">CAREER: Data Polymorphism: Enabling Fast and Adaptable Scientific Data Retrieval with Progressive Representations
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: PI</li>
@@ -195,6 +206,19 @@
         <div><hr></div>        
         <h4 class="lead">Refereed Conference Publications</h4>
         <div><hr></div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>ICDE'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Mingze Xia</u>, Bei Wang, Yuxiao Li, <u>Pu Jiao</u>, <b>Xin Liang<sup>*</sup></b>, Hanqi Guo.<br>
+              TspSZ: An Efficient Parallel Error-Bounded Lossy Compressor for Topological Skeleton Preservation.<br>
+              <I>Proceedings of the 41st IEEE International Conference on Data Engineering, Hong Kong SAR, China, May 19 - 23, 2025.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
 
         <div class="row">
           <div class="col-md-2">
