--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
-          <li>04/2025: I am very honored to receive the <b>Pigman College of Engineering Excellence in Research Award</b> (one out of all of Assistant Professors in the Stanley and Karen Pigman Colledge of Engineering). Thanks a lot for the recognition from the college!</li>
+          <li>04/2025: I am very honored to receive the <b>Pigman College of Engineering Excellence in Research Award</b> (one out of all Assistant Professors in the Stanley and Karen Pigman Colledge of Engineering at the University of Kentucky). Thanks a lot for the recognition from the college!</li>
           <li>04/2025: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2504255&HistoricalAwards=false">OAC Core project</a> has been awarded by the National Science Foundation (my role: site PI, in collaborations with the University of Illinois, Urbana-Champion). This project aims to design a learning-driven framework to mitigate artifacts in scientific lossy data compressors. Thanks a lot to the NSF!</li>
           <li>03/2025: One paper has been accepted at ICDE'25. Congratulations to Mingze!</li>
           <li>01/2025: Xuan's paper on unstructured scientific data compression has been nominated for the <b>Best Paper Award</b> in IPDPS'25. Congratulations to Xuan and the team!</li>
