--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>04/2025: One paper has been accepted at VLDB'25. Congratulations to Pu!</li>
           <li>04/2025: I am very honored to receive the <b>Pigman College of Engineering Excellence in Research Award</b> (one out of all Assistant Professors in the Stanley and Karen Pigman Colledge of Engineering at the University of Kentucky). Thanks a lot for the recognition from the college!</li>
           <li>04/2025: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2504255&HistoricalAwards=false">OAC Core project</a> has been awarded by the National Science Foundation (my role: site PI, in collaborations with the University of Illinois, Urbana-Champaign). This project aims to design a learning-driven framework to mitigate artifacts in scientific lossy data compressors. Thanks a lot to the NSF!</li>
           <li>03/2025: One paper has been accepted at ICDE'25. Congratulations to Mingze!</li>
@@ -177,6 +178,19 @@
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
 
         <p><I>My students are underlined.</I></p>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>VLDB'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu<sup>+</sup>, <u>Pu Jiao<sup>+</sup></u>, Kai Zhao, <b>Xin Liang<sup>*</sup></b>, Sheng Di, and Franck Cappello.<br>
+              QPET: A Versatile and Portable Quantity-of-Interest-Preservation Framework for Error-Bounded Lossy Compression.<br>
+              <I>Proceedings of the 51st International Conference on Very Large Data Bases, London, United Kingdom, Sep 1 - Sep 5, 2025.</I> (+: Co-first authors, *: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
 
         <div class="row">
           <div class="col-md-2">
@@ -309,9 +323,9 @@
           </div>
           <div class="col-md-10">
             <p>
-              <b>Xin Liang<sup>*</sup></b>, Ben Whitney<sup>*</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
+              <b>Xin Liang<sup>+</sup></b>, Ben Whitney<sup>+</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
               MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
-              <I>IEEE Transactions on Computers, 2021.</I> (*: Co-first authors)<br>
+              <I>IEEE Transactions on Computers, 2021.</I> (+: Co-first authors)<br>
             </p>
           </div>
         </div> 
