--- a/research.html
+++ b/research.html
@@ -209,6 +209,19 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>VLDB'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu<sup>+</sup>, <u>Pu Jiao<sup>+</sup></u>, Kai Zhao, <b>Xin Liang<sup>*</sup></b>, Sheng Di, and Franck Cappello.<br>
+              QPET: A Versatile and Portable Quantity-of-Interest-Preservation Framework for Error-Bounded Lossy Compression.<br>
+              <I>Proceedings of the 51st International Conference on Very Large Data Bases, London, United Kingdom, Sep 1 - Sep 5, 2025.</I> (+: Co-first authors, *: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>ICDE'25</h6>
           </div>
           <div class="col-md-10">
@@ -1020,9 +1033,9 @@
           </div>
           <div class="col-md-10">
             <p>
-              <b>Xin Liang<sup>*</sup></b>, Ben Whitney<sup>*</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
+              <b>Xin Liang<sup>+</sup></b>, Ben Whitney<sup>+</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
               MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
-              <I>To appear in IEEE Transaction on Computers, 2021.</I> (*: Co-first authors)<br>
+              <I>To appear in IEEE Transaction on Computers, 2021.</I> (+: Co-first authors)<br>
             </p>
           </div>
         </div>  
