--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>06/2025: Xuan's paper on unstructured scientific data compression has been selected for the <b>Best Paper Award</b> in IPDPS'25. Congratulations to Xuan and the team!</li>
           <li>04/2025: One paper has been accepted at VLDB'25. Congratulations to Pu!</li>
           <li>04/2025: I am very honored to receive the <b>Pigman College of Engineering Excellence in Research Award</b> (one out of all Assistant Professors in the Stanley and Karen Pigman Colledge of Engineering at the University of Kentucky). Thanks a lot for the recognition from the college!</li>
           <li>04/2025: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2504255&HistoricalAwards=false">OAC Core project</a> has been awarded by the National Science Foundation (my role: site PI, in collaborations with the University of Illinois, Urbana-Champaign). This project aims to design a learning-driven framework to mitigate artifacts in scientific lossy data compressors. Thanks a lot to the NSF!</li>
@@ -213,7 +214,7 @@
             <p>
               <u>Xuan Wu</u>, Sheng Di, Congrong Ren, <u>Pu Jiao</u>, <u>Mingze Xia</u>, Cheng Wang, Hanqi Guo, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
               Enabling Efficient Error-controlled Lossy Compression for Unstructured Scientific Data.<br>
-              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> <b>Nominated for the Best Paper Award.</b> (*: Corresponding authors)<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> <b>Selected for the Best Paper Award.</b> (*: Corresponding authors)<br>
             </p>
           </div>
         </div> 
