--- a/crii.html
+++ b/crii.html
@@ -81,13 +81,26 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>VLDB'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu<sup>+</sup>, <u>Pu Jiao<sup>+</sup></u>, Kai Zhao, <b>Xin Liang<sup>*</sup></b>, Sheng Di, and Franck Cappello.<br>
+              QPET: A Versatile and Portable Quantity-of-Interest-Preservation Framework for Error-Bounded Lossy Compression.<br>
+              <I>Proceedings of the 51st International Conference on Very Large Data Bases, London, United Kingdom, Sep 1 - Sep 5, 2025.</I> (+: Co-first authors, *: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>IPDPS'25</h6>
           </div>
           <div class="col-md-10">
             <p>
               <u>Xuan Wu</u>, Sheng Di, Congrong Ren, <u>Pu Jiao</u>, <u>Mingze Xia</u>, Cheng Wang, Hanqi Guo, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
               Enabling Efficient Error-controlled Lossy Compression for Unstructured Scientific Data.<br>
-              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> <b>Nominated for the Best Paper Award.</b> (*: Corresponding authors)<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> <b>Selected for the Best Paper Award.</b> (*: Corresponding authors)<br>
             </p>
           </div>
         </div> 
