--- a/group.html
+++ b/group.html
@@ -82,23 +82,7 @@
           <div class="col-md-2"></div> 
         </div>        
       </div> 
-      <div><hr></div>
-      <h2 align="center">Postdoc Researcher</h2>
-      <div><hr></div>
-      <div class="starter-template">
-        <div class="row">
-          <div class="col-md-2"></div> 
-          <div class="col-md-6">
-              <h2 align="left"> Jiannan Tian</h2>
-              <p align="left">Dr. Jiannan Tian Received his Ph.D. degree in Computer Engineering (Intelligent Systems Engineering, Computer Engineering Track) from Indiana University Bloomington in 2024. His research interests include High-Performance Computing, Heterogeneous Computing, Big-Data Analytics, and Accelerated Scientific Compression. During his Ph.D. study, he works as a student intern at Argonne National Laboratory (ANL). He is also the leading developer of open-source pSZ/cuSZ, a GPU-accelerated error-bounded lossy compressor for scientific data. Contact him at <a href="mailto:jiannan.tian@uky.edu">jiannan.tian@uky.edu</a>.
-              </p>          
-          </div>
-          <div class="col-md-2">
-              <img src="img/Jiannan.jpg" class="float-right" style="height:200px;margin-right:10px">
-          </div>  
-          <div class="col-md-2"></div> 
-        </div>        
-      </div> 
+
       <div><hr></div>
       <h2 align="center">Graduate Students</h2>
       <div><hr></div>
@@ -165,6 +149,20 @@
         </div>          
       </div> 
       <div><hr></div>
+
+      <div><hr></div>
+      <h2 align="center">Alumni</h2>
+      <div><hr></div>
+      <div class="starter-template">
+        <div class="row">
+          <div class="col-md-2"></div> 
+          <div class="col-md-8">
+              <p align="left">Jiannan Tian (PostDoc @ UK, 2024-2025, now Assistant Professor @ Oakland University)</p>          
+          </div>
+          <div class="col-md-2"></div> 
+        </div>        
+      </div> 
+
   <!-- </div> -->
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
