--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>07/2025: Jiannan has accepted an offer from Oakland University and will start as a tenure-track Assistant Professor there on August. Congratulations to Prof. Tian!</li>
+          <li>06/2025: Four papers have been accepted by SC'25. Congratulations to Wenbo on his co-first author paper!</li>
+          <li>06/2025: Jiannan's <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2514035&HistoricalAwards=false">CSSI project</a> has been awarded by the National Science Foundation (his role: site PI, in collaborations with the University of Houston and the University of Chicago). Congratulations to Jiannan!</li>
           <li>06/2025: Xuan's paper on unstructured scientific data compression has been selected for the <b>Best Paper Award</b> in IPDPS'25. Congratulations to Xuan and the team!</li>
           <li>04/2025: One paper has been accepted at VLDB'25. Congratulations to Pu!</li>
           <li>04/2025: I am very honored to receive the <b>Pigman College of Engineering Excellence in Research Award</b> (one out of all Assistant Professors in the Stanley and Karen Pigman Colledge of Engineering at the University of Kentucky). Thanks a lot for the recognition from the college!</li>
@@ -179,6 +182,19 @@
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
 
         <p><I>My students are underlined.</I></p>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SC'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Yanliang Li<sup>+</sup>, <u>Wenbo Li<sup>+</sup></u>, Qian Gong, Qing Liu, Norbert Podhorszki, Scott Klasky, <b>Xin Liang</b>, and Jieyang Chen.<br>
+              HP-MDR: High-performance and Portable Data Refactoring and Progressive Retrieval with Advanced GPUs.<br>
+              <I>Proceedings of the 38th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, MO, USA, Nov 16 - 21, 2025.</I> (+: Co-first authors)<br>
+            </p>
+          </div>
+        </div>
 
         <div class="row">
           <div class="col-md-2">
