--- a/research.html
+++ b/research.html
@@ -209,6 +209,58 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>SC'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Yanliang Li<sup>+</sup>, <u>Wenbo Li<sup>+</sup></u>, Qian Gong, Qing Liu, Norbert Podhorszki, Scott Klasky, <b>Xin Liang</b>, and Jieyang Chen.<br>
+              HP-MDR: High-performance and Portable Data Refactoring and Progressive Retrieval with Advanced GPUs.<br>
+              <I>Proceedings of the 38th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, MO, USA, Nov 16 - 21, 2025.</I> (+: Co-first authors)<br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SC'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Shixun Wu<sup>+</sup>, Jinwen Pan<sup>+</sup>, Jinyang Liu<sup>*</sup>, Jiannan Tian, Ziwei Qiu, Jiajun Huang, Kai Zhao, <b>Xin Liang</b>, Sheng Di, Zizhong Chen, and Franck Cappello.<br>
+              Boosting Scientific Error-Bounded Lossy Compression through Optimized Synergistic Lossy-Lossless Orchestration.<br>
+              <I>Proceedings of the 38th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, MO, USA, Nov 16 - 21, 2025.</I> (+: Co-first authors, *: Corresponding authors)<br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SC'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Qian Gong, Mark Ainsworth, Jieyang Chen, <b>Xin Liang</b>, Liangji Zhu, Ethan Klasky, Tushar Athawale, Qing Liu, Anand Rangarajan, Sanjay Ranka, and Scott Klasky.<br>
+              Stability-preserving Lossy Compression for Large-scale Partial Differential Equations.<br>
+              <I>Proceedings of the 38th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, MO, USA, Nov 16 - 21, 2025.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SC'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Franck Cappello et. al.<br>
+              What to Support When You’re Compressing: The State of Practice, Gaps, and Opportunities for Scientific Data Compression.<br>
+              <I>Proceedings of the 38th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, MO, USA, Nov 16 - 21, 2025.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>VLDB'25</h6>
           </div>
           <div class="col-md-10">
