--- a/awards.html
+++ b/awards.html
@@ -57,7 +57,7 @@
           <h2>Awards</h2>
           <ul class="glyphicon glyphicon-list-alt">
               <li>Pigman College of Engineering Excellence in Research Award, Stanley and Karen Pigman Colledge of Engineering, University of Kentucky, 2025.</li>
-              <li>Best Paper Award Nomination, IPDPS, 2025.</li>
+              <li>Best Paper Award, IPDPS, 2025.</li>
               <li>CAREER Award, NSF, 2025.</li>
               <li>2023 Best Paper Award from IEEE Transactions on Big Data, IEEE Computer Society Publications Board, 2024.</li>
               <li>IEEE-CS Technical Community on High Performance Computing (TCHPC) Early Career Researchers Award for Excellence in High Performance Computing, IEEE TCHPC, 2024.</li>
