--- a/group.html
+++ b/group.html
@@ -73,7 +73,7 @@
           <div class="col-md-2"></div> 
           <div class="col-md-6">
               <h2 align="left"> Xin Liang</h2>
-              <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the Department of Computer Science at University of Kentucky (UK). He received his Ph.D. in Computer Science from University of California, Riverside in 2019. Prior to that, he received his B.S. in Computer Science from Peking University in 2014, with a minor in Math and Applied Math. Prior to joining UK, he worked as an assistant professor at Missouri University of Science and Technology and a Computer/Data Scientist in the Workflow Systems Group at Oak Ridge National Laboratory (ORNL). Contact him at <a href="mailto:xliang@uky.edu">xliang@uky.edu</a>.
+              <p align="left">Dr. Xin Liang is a tenure-track associate professor with the School of Electrical Engineering and Computer Science at Oregon State University. He received his Ph.D. in Computer Science from University of California, Riverside in 2019. Prior to that, he received his B.S. in Computer Science from Peking University in 2014, with a minor in Math and Applied Math. Prior to joining Oregon State University, he worked as an assistant professor at University of Kentucky and Missouri University of Science and Technology, and a Computer/Data Scientist in the Workflow Systems Group at Oak Ridge National Laboratory (ORNL). Contact him at <a href="mailto:xin.liang@oregonstate.edu">xin.liang@oregonstate.edu</a>.
               </p>          
           </div>
           <div class="col-md-2">
@@ -103,7 +103,7 @@
           <div class="col-md-2"></div> 
           <div class="col-md-6">
               <h2 align="left">Mingze Xia</h2>
-              <p align="left">Mr. Mingze Xia joined Polaris Lab in Fall 2022. He received his B.Math(Hons) in Statistics from the University of Waterloo in 2017 and Master’s degree in Data Science from The University of Melbourne in 2019. Previously, he worked at Duke Kunshan University as an Research Fellow and Huawei from 2020 to 2022 as a Data Scientist. His research interests focus on lossy compression, deep learning, and data mining. Contact him at <a href="mailto:mingze.xia@uky.edu">mingze.xia@uky.edu</a>.
+              <p align="left">Mr. Mingze Xia joined Polaris Lab in Fall 2022. He received his B.Math(Hons) in Statistics from the University of Waterloo in 2017 and Master’s degree in Data Science from The University of Melbourne in 2019. Previously, he worked at Duke Kunshan University as an Research Fellow and Huawei from 2020 to 2022 as a Data Scientist. His research interests focus on lossy compression, deep learning, and data mining. Contact him at <a href="mailto:xiami@oregonstate.edu">xiami@oregonstate.edu</a>.
               </p>         
           </div>
           <div class="col-md-2">
@@ -115,31 +115,19 @@
           <div class="col-md-2"></div> 
           <div class="col-md-6">
               <h2 align="left">Xuan Wu</h2>
-              <p align="left">Ms. Xuan Wu received her bachelor’s degree in Statistics from Wuhan University in 2022. Xuan joined Polaris lab in Fall 2023. Previously, she worked on developing computational algorithms in the field of statistical genetics. Her research interests include high-performance computing and scientific data compression. Contact her at <a href="mailto:xuan.wu@uky.edu">xuan.wu@uky.edu</a>.
+              <p align="left">Ms. Xuan Wu received her bachelor’s degree in Statistics from Wuhan University in 2022. Xuan joined Polaris lab in Fall 2023. Previously, she worked on developing computational algorithms in the field of statistical genetics. Her research interests include high-performance computing and scientific data compression. Contact her at <a href="mailto:wuxuan@oregonstate.edu">wuxuan@oregonstate.edu</a>.
               </p>         
           </div>
           <div class="col-md-2">
               <img src="img/xuan.jpg" class="float-right" style="height:200px;margin-right:10px">
           </div> 
           <div class="col-md-2"></div> 
-        </div>                  
-        <div class="row">
-          <div class="col-md-2"></div> 
-          <div class="col-md-6">
-              <h2 align="left">Boyi Zhang</h2>
-              <p align="left">Mr. Boyi Zhang joined the Polaris Lab in Fall 2024. He received his bachelor's degree in Software Engineering from Dalian University of Technology in 2022 and Master degree in Computer Science from the University of California, Riverside in 2024. Previously, he worked on fault-tolerance BLAS algorithms. His research interests include but not limited to lossy compression, GPU computing and fault tolerance algorithms. Contact him at <a href="mailto:boyi.zhang@uky.edu">boyi.zhang@uky.edu</a>.
-              </p>         
-          </div>
-          <div class="col-md-2">
-              <img src="img/boyi.jpg" class="float-right" style="height:200px;margin-right:10px">
-          </div> 
-          <div class="col-md-2"></div> 
-        </div>          
+        </div>                            
         <div class="row">
           <div class="col-md-2"></div> 
           <div class="col-md-6">
               <h2 align="left">Wenbo Li</h2>
-              <p align="left">Mr. Wenbo Li received his bachelor’s degree in Bioinformatics from Huazhong University of Science and Technology in 2024. Wenbo joined Polaris lab in Fall 2024. Previously, he worked on proteomics and protein language models for the prediction of post-translation modifications. His research interests include high-performance computing, GPU computing, and scientific data compression. Contact him at <a href="mailto:wenbo.li@uky.edu">wenbo.li@uky.edu</a>.
+              <p align="left">Mr. Wenbo Li received his bachelor’s degree in Bioinformatics from Huazhong University of Science and Technology in 2024. Wenbo joined Polaris lab in Fall 2024. Previously, he worked on proteomics and protein language models for the prediction of post-translation modifications. His research interests include high-performance computing, GPU computing, and scientific data compression. Contact him at <a href="mailto:liwenb@oregonstate.edu">liwenb@oregonstate.edu</a>.
               </p>         
           </div>
           <div class="col-md-2">
