--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
           <br/>
           <h2> Xin Liang</h2>
           <br/>
-          <h3 class="lead">Assistant Professor<br/>
-          Department of Computer Science<br/>
-          University of Kentucky</h3>
+          <h3 class="lead">Associate Professor<br/>
+          School of Electrical Engineering and Computer Science<br/>
+          Oregon State University</h3>
           <br/>
-          <h4 class="lead">Office: 227 James F. Hardymon Bldg.<br/>
-          Email: xliang@uky.edu<br/>
-          Tel: (859)257-8029</h4>
+          <h4 class="lead">Office: 3075 Kelley Engineering Center<br/>
+          Email: xin.liang@oregonstate.edu<br/>
+          <!-- Tel: (859)257-8029</h4> -->
           <br/>
         </div>  
 
@@ -73,10 +73,12 @@
         <div class="col">
             <img src="img/me.jpg" class="float-right" style="height:300px;margin-right:10px">
           <h2 align="left"> Biography</h2>
-          <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the <a href="https://www.engr.uky.edu/research-faculty/departments/computer-science">Department of Computer Science</a> at <a href="https://www.uky.edu">University of Kentucky (UK)</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he worked as student interns in the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory (ANL)</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory (PNNL)</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory (LANL)</a>. Prior to joining UK, he worked as an assistant professor at <a href="https://www.mst.edu">Missouri University of Science and Technology</a> and Computer/Data Scientist in the Workflow Systems Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory (ORNL)</a>.</p>
+          <p align="left">Dr. Xin Liang is a tenure-track associate professor with the <a href="https://engineering.oregonstate.edu/EECS">School of Electrical Engineering and Computer Science</a> at <a href="https://oregonstate.edu/">Oregon State University</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he worked as student interns in the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory (ANL)</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory (PNNL)</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory (LANL)</a>. Prior to joining Oregon State University, he worked as an assistant professor at <a href="https://www.uky.edu">University of Kentucky</a> and <a href="https://www.mst.edu">Missouri University of Science and Technology</a>, and Computer/Data Scientist in the Workflow Systems Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory (ORNL)</a>.</p>
           <p align="left">Dr. Liang's research interests lie broadly in the areas of high-performance computing, parallel and distributed systems, scientific data management, large-scale data analytics, and distributed machine learning. He has published in many highly competitive conferences and journals such as IEEE/ACM SC, ACM HPDC, ACM PPoPP, ACM ICS, IEEE IPDPS, ACM PACT, IEEE BigData, IEEE Cluster, IEEE TPDS etc. He has received a <I>Dissertation Year Fellowship (DYP)</I> from UCR, two <I>Best Paper Awards</I> from IEEE Cluster, one <I>Best Paper Finalist</I> from ACM ICS, one <I>Best Paper Award</I> from IEEE IPDPS, one <I>Best Paper Award</I> from IEEE TBD, a <I>CRII Award</I> from the NSF, an <I>EPSCoR Fellowship</I> from the NSF, and a <I>CAREER Award</I> from the NSF. He has also received the <I>IEEE CS TCHPC Early Career Researchers Award For Excellence in High Performance Computing</I> in 2024. While working at ORNL, he led the ESAMR project funded by the <I>Director's Research and Development (DRD)</I> program as principal investigator. He is one of the key developers of SZ and major contributors of MGARD, which are two widely used data reduction software in the scientific computing community. More details about Dr. Liang can be found in his <a href="cv.pdf" target="_blank" data-content="cv.pdf" data-type="external" rel="undefined">CV</a></span>.</p>
 
-          <p align="left"><b>Dr. Liang is always looking for self-motivated students to work on high-performance computing, scientific data management, and big data analytics. If you're interested in his research, please contact him at <a href="mailto:xliang@uky.edu">xliang@uky.edu</a>. According to <a href="https://csrankings.org">CS ranking</a>, UK is ranked <a href="https://csrankings.org/#/index?hpc&us">35th considering the last ten years (2014-2024)</a> and <a href="https://csrankings.org/#/fromyear/2016/toyear/2024/index?hpc&us">27th considering the last eight years (2016-2024)</a> among all the US universities in the area of high-performance computing.</b></p>
+          <p align="left"><b>Dr. Liang is always looking for self-motivated students to work on high-performance computing, scientific data management, and big data analytics. If you're interested in his research, please contact him at <a href="mailto:xin.liang@oregonstate.edu">xin.liang@oregonstate.edu</a>. 
+            <!-- According to <a href="https://csrankings.org">CS ranking</a>, UK is ranked <a href="https://csrankings.org/#/index?hpc&us">35th considering the last ten years (2014-2024)</a> and <a href="https://csrankings.org/#/fromyear/2016/toyear/2024/index?hpc&us">27th considering the last eight years (2016-2024)</a> among all the US universities in the area of high-performance computing. -->
+          </b></p>
         </div>
       </div>
 
@@ -84,6 +86,8 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>12/2025: Two papers have been accepted by IPDPS'26. Congratulations to Pu!</li>
+          <li>07/2025: One paper has been accepted by VIS'25.</li>
           <li>07/2025: Jiannan has accepted an offer from Oakland University and will start as a tenure-track Assistant Professor there on August. Congratulations to Prof. Tian!</li>
           <li>06/2025: Four papers have been accepted by SC'25. Congratulations to Wenbo on his co-first author paper!</li>
           <li>06/2025: Jiannan's <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2514035&HistoricalAwards=false">CSSI project</a> has been awarded by the National Science Foundation (his role: site PI, in collaborations with the University of Houston and the University of Chicago). Congratulations to Jiannan!</li>
@@ -101,7 +105,7 @@
           <li>11/2024: One paper has been accepted at SIGMOD'25.</li>
           <li>10/2024: Dr. Jiannan Tian joined our team as a postdoc researcher. Welcome Jiannan!</li>
           <li>09/2024: We received a renewal of our subcontract from Argonne National Laboratory to continue the investigation of feature regeneration in lossy compressors. Thanks a lot to ANL!</li>
-          <li>08/2024: Boyi Zhang and Wenbo Li joined our team as PhD students. Welcome Boyi and Wenbo!</li>
+          <li>08/2024: Wenbo Li joined our team as PhD students. Welcome Wenbo!</li>
           <li>07/2024: One paper has been accepted in VIS'24.</li>
           <li>06/2024: Two papers have been accepted in SC'24. Congratulations to Xuan on getting her first SC paper accepted!</li>
           <li>03/2024: One paper has been accepted in EuroVis'24.</li>
